Ensure that columns have a baseline width
Otherwise they can get too small if there's a long description column.

--- a/styleguide/components/table/table.css
+++ b/styleguide/components/table/table.css
@@ -4,3 +4,8 @@
   composes: table from '../../../src/components/table/table.css';
   border: 1px solid var(--palette-neutral-light);
 }
+
+.header {
+  composes: headerCell from '../../../src/components/table/table.css';
+  min-width: 100px;
+}
